corrected my CSS to make the button in contact us look correct and the spacing in the hero form look correct.

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1,12 +1,12 @@
 *{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 body {
     /* more on this crazy alphanumerical value in a minute! */
     color: #39a6b2;
-    font-family: helvetica, arial, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
 }
 /* apply styles to <header> */
 header {
@@ -40,7 +40,7 @@ header nav ul {
     list-style: none;
 }
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -75,6 +75,7 @@ section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 .hero-form {
 background-color: #fce138;
@@ -104,9 +105,7 @@ border-color: #024e76;
 }
 
 .hero-form label {
-    margin: 0 5px;
-    width: 40%;
-    margin: 3.5%;
+    margin: 0 5px;  
 }
 
 .hero-form button {
@@ -123,7 +122,7 @@ border-color: #024e76;
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -194,7 +193,7 @@ color: #fce138;
 }
 
 .section-title {
-font-size: 55px;
+font-size: 48px;
 color: #024e76;
 border-bottom: 3px solid;
 padding-bottom: 20px;
@@ -313,7 +312,7 @@ border: none;
 background: #fce138;
 color: #024e76;
 text-align: center;
-padding:15px 0;
+padding: 15px 0;
 font-size: 16px;
 
 }
@@ -323,4 +322,114 @@ font-size: 16px;
 
 .flex-row {
     display: flex;
+}
+
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+        /* this will be applies on any screen smaller than 980px */
+        header {
+            padding-bottom: 0;
+            justify-content: center;
+        }
+        header h1 {
+            width: 100%;
+            text-align: center;
+        }
+
+        header nav ul {
+            margin-top: 20px;
+            width: 100%;
+            justify-content: center;
+        }
+
+        header nav ul li a {
+            font-size: 20px;
+        }
+
+        footer h2, footer div {
+            text-align: center;
+            width: 100%;
+        }
+
+        .hero-cta, .hero-form {
+            width: 100%;
+        }
+
+        .hero-cta{
+            text-align: center;
+        }
+
+        .section-title {
+            width: 80%;
+        }
+
+        .trainer {
+            flex: 0 70%;
+        }
+
+        .contact-info iframe{
+            flex: 1 100%;
+        }
+}
+
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
+@media  screen and (max-width: 768px) {
+        /* this will be applies on any screen between  768px and 575px */
+        section {
+            padding: 30px 15px;
+        }
+
+        .step h3 {
+            flex: 1 100%;
+            text-align: center;
+        }
+
+        .step-info {
+            flex: 2 100%;
+            text-align: center;
+            justify-content: center;
+        }
+
+        .step-img {
+            flex: 0 32%;
+            margin-right: 0;
+            margin-top: 15px;
+            margin-bottom: 15px;
+        }
+
+        .step-text {
+            flex: 100%;
+        }
+}
+
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLERS */
+@media screen and (max-width: 575px) {
+        /* this will be applies on any screensmaller than 575px */
+        .hero-form button {
+            width: 100%;
+        }
+
+        .section-title {
+            width: 95%;
+        }
+
+        .intro p {
+            width: 100%;
+        }
+
+        .trainer {
+            flex: 0 100%;
+        }
+
+        .contact-info {
+            text-align: center;
+        }
+
+        .contact-info > * {
+            flex: 0 100%;
+        }
+
+        .contact-form {
+            order: 3;
+        }
 }
